# EmbeddedSystems_RobotCar

./: .gitignore  CMakeLists.txt  README.md  initalpico_w_udp_byte.uf2  ir_line_sensor.uf2  main.c  mosquitto.conf  motor_encoder.uf2  pico_w_wifi.uf2  ultrasonic.uf2  ultrasonic_hcsr04.uf2
src/: CMakeLists.txt  barcode.c  barcode.h  line_follow.h  motor_encoder.c  motor_encoder.h  pid.c  servo.c  servo.h
src/mqtt_robot/dashboard/: dashboard.css  dashboard.html  dashboard.js
src/mqtt_robot/include/: lwipopts.h  mqtt_client.h  mqtt_config.h
src/mqtt_robot/src/: main.c  mqtt_pico.c
test/: CMakeLists.txt  README.md  build_tests.sh  test_pid.c  test_runner.c  test_utils.c  test_utils.h
week10demo/: integrated_robot.c  main.c  pico_sdk_config.h  robot_config.h
week6demo/: BIDIR_USAGE.md  CMakeLists.txt
week6demo/Integration/: CMakeLists.txt  barcode.c  barcode.h  imu_lis3dh.c  imu_lis3dh.h  imu_mpu6050.c  imu_mpu6050.h  ir_line_sensor.c  line_follow.c  main.c  motor_encoder.c  motor_encoder.h  odometry.c  odometry.h  pid.c  pid.h  ultrasonic.c
week6demo/WiFi/: CMakeLists.txt  bidir.py  import socket.py
week6demo/WiFi/include/: config.h  lwipopts.h
week6demo/WiFi/src/: main.c
week6demo/imu/: CMakeLists.txt
week6demo/imu/include/: imu.h
week6demo/imu/src/: i2c_scanner.c  imu.c  imu_test.c
week6demo/include/: i2c.h
week6demo/linefollowing/: encoder.h  main.c
week6demo/mqtt_robot/: README.md
week6demo/mqtt_robot/dashboard/: dashboard.css  dashboard.html  dashboard.js
week6demo/mqtt_robot/include/: lwipopts.h  mqtt_config.h
week6demo/mqtt_robot/src/: main.c  mqtt_pico.c
week6demo/other4/src/: CMakeLists.txt  accel_raw_mpu6050.c  i2c_scan.c  ir_line_sensor.c  motor_encoder.c  ultrasonic_hcsr04.c
week6demo/ultrasonic/: CMakeLists.txt  dashboard.c  dashboard.css  dashboard.html  dashboard.js  imu_lis3dh.c  imu_lis3dh.h  lwipopts.h  main.c  mosquitto.conf  motor_encoder.c  motor_encoder.h  mqtt_client.h  mqtt_config.h  mqtt_pico.c  pid.c  pid.h  ultrasonic.c  ultrasonic.h  ultrasonicObject.cpp  ultrasonicObject.h
